[package]
name = "rvb_contract"
version = "0.1.0"
edition = "2024"

[dependencies]
wasmtime = { version = "33.0.0", optional = true, features = ["runtime","winch"], default-features = false }
rvb_clib = { path = '../rvb_clib' }
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rvb_common = { path = "../rvb_common" }
rvb_core = { path = "../rvb_core" }
rmp-serde = "1.3.0"

[features]
wasmtime = ["dep:wasmtime"]
wasmnative = []
