[package]
name = "rvb_contract"
version = "0.1.0"
edition = "2024"

[dependencies]
wasmtime = { version = "33.0.0", optional = true }
rvb_common = { path = "../rvb_common" }
rmp-serde = "1.3.0"
log = "0.4.27"

[features]
default = ["runtime"]
runtime = ["dep:wasmtime"]

[dev-dependencies]
env_logger = "0.11.8"
