[package]
name = "rvb_core"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8.5"
rsa = { version = "0.9.8", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
sha2 = { version = "0.10.9", features = ["oid"] }
thiserror = "2.0.12"
rvb_common = { path = "../rvb_common" }