[package]
name = "rvb_node"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
mainline = "5.4.0"
rvb_common = { path = "../rvb_common", features = ["transport"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full", "net", "rt"] }
log = "0.4.27"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
sled = "0.34.7"
