[package]
name = "rvb_storage"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
sled = { version = "0.34.7", optional = true }
rvb_core = { path = "../rvb_core"}
thiserror = "2.0.12"
web-sys = { version = "0.3.77", optional = true, features = ["Storage", "Window"]}
base64 = { version = "0.22.1", optional = true }
rmp-serde = "1.3.0"

[features]
full = ["default", "web"]
default = ["disk", "memory"]
disk = ["dep:sled"]
memory = []
web = ["dep:web-sys" ,"dep:base64"]
